Fixed padding in call-to-actions buttons on Home and Products page so the buttons don't stick together on small device sizes

--- a/shared.css
+++ b/shared.css
@@ -138,3 +138,10 @@ i {
     text-align: center;
     font-weight: bold;
 }
+
+@media (max-width: 404px) {
+    #hib-home-bottom-buttons > a:nth-child(1) > button,
+    #hib-products-bottom-buttons > a:nth-child(1) > button {
+        margin-bottom: 5px;
+    }
+}
